implemented the formatting logic for xml response type